Fix spacing on edit description button

--- a/app/assets/stylesheets/components/user.scss
+++ b/app/assets/stylesheets/components/user.scss
@@ -45,6 +45,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  min-width: 600px;
 
   button {
     width: 120px;
